--- a/financial-dashboard/package.json
+++ b/financial-dashboard/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "add": "^2.0.6",
     "chart.js": "^4.4.3",
@@ -22,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.5",
     "shadcn-ui": "^0.8.0",
     "sheet": "^0.2.0",
     "tailwind-merge": "^2.3.0",
