--- a/financial-dashboard/package.json
+++ b/financial-dashboard/package.json
@@ -18,12 +18,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.390.0",
-    "next": "14.2.3",
+    "next": "^14.2.4",
     "query-string": "^9.0.0",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "shadcn-ui": "^0.8.0",
     "sheet": "^0.2.0",
